--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,4 +37,5 @@ project.TelecomWebsite-war=TelecomWebsite-war
 reference.TelecomWebsite-ejb.dist-ear=${project.TelecomWebsite-ejb}/dist/TelecomWebsite-ejb.jar
 reference.TelecomWebsite-war.dist-ear=${project.TelecomWebsite-war}/dist/TelecomWebsite-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
