--- a/TelecomWebsite-ejb/nbproject/project.properties
+++ b/TelecomWebsite-ejb/nbproject/project.properties
@@ -21,6 +21,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.mysql-connector.jar=C:\\Users\\rohan\\Downloads\\mysql-connector.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -34,7 +35,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=TelecomWebsite-ejb.jar
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=${javac.classpath}
